--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <ion-button size="large" routerLink="/">Home</ion-button>
+  <ion-button size="large" routerLink="/home">Home</ion-button>
 </ion-content>
