--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -9,14 +9,14 @@
     <ion-label>
       Email:
     </ion-label>
-    <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+    <ion-input type="text" [(ngModel)]="user.email" required></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label>
       Password:
     </ion-label>
-    <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+    <ion-input type="password" [(ngModel)]="user.password" required></ion-input>
   </ion-item>
   <ion-button size="large" (click)="onRegister()">Registrar</ion-button>
   <ion-button size="large" routerLink="/login">Login</ion-button>
