--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,68 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Peliculas
-    </ion-title>
+  <ion-toolbar color="primary" align="center">
+    <ion-title>Cine & TV</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button size="large" (click)="onLogout()">Logout</ion-button>
-  <ion-button size="large" routerLink="/admin">Admin</ion-button>
+
+  <div>
+    <div>
+      <ion-button size="large" routerLink="/pelis" color="secondary">Ver el contenido</ion-button>
+    </div>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th scope="col">Películas</th>
+          <th scope="col">Series</th>
+          <th scope="col">TV</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><a href="https://m.media-amazon.com/images/M/MV5BYThjYzcyYzItNTVjNy00NDk0LTgwMWQtYjMwNmNlNWJhMzMyXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BYThjYzcyYzItNTVjNy00NDk0LTgwMWQtYjMwNmNlNWJhMzMyXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+
+          <td><a href="https://m.media-amazon.com/images/M/MV5BMTkyODgwMDMzNV5BMl5BanBnXkFtZTgwMTExOTMyMjE@._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BMTkyODgwMDMzNV5BMl5BanBnXkFtZTgwMTExOTMyMjE@._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+
+          <td><a href="https://m.media-amazon.com/images/M/MV5BMTJmNDI2NGMtMDhlNS00ZDk3LTg5ZjktZjdkY2Q4MWQ5ZDI0XkEyXkFqcGdeQXVyMTk4MDgwNA@@._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BMTJmNDI2NGMtMDhlNS00ZDk3LTg5ZjktZjdkY2Q4MWQ5ZDI0XkEyXkFqcGdeQXVyMTk4MDgwNA@@._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+
+        </tr>
+        <tr>
+          <td><a href="https://m.media-amazon.com/images/M/MV5BMTU4OTQ0NDUzMV5BMl5BanBnXkFtZTcwOTc4NDc4OA@@._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BMTU4OTQ0NDUzMV5BMl5BanBnXkFtZTcwOTc4NDc4OA@@._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+
+          <td><a href="https://m.media-amazon.com/images/M/MV5BODZlYzc2ODYtYmQyZS00ZTM4LTk4ZDQtMTMyZDdhMDgzZTU0XkEyXkFqcGdeQXVyMzQ2MDI5NjU@._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BODZlYzc2ODYtYmQyZS00ZTM4LTk4ZDQtMTMyZDdhMDgzZTU0XkEyXkFqcGdeQXVyMzQ2MDI5NjU@._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+
+          <td><a href="https://m.media-amazon.com/images/M/MV5BMTYyMzYxMjM3OF5BMl5BanBnXkFtZTcwNjg2OTA3MQ@@._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BMTYyMzYxMjM3OF5BMl5BanBnXkFtZTcwNjg2OTA3MQ@@._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+        </tr>
+        <tr>
+          <td><a href="https://m.media-amazon.com/images/M/MV5BMjA4MDA2OTc4N15BMl5BanBnXkFtZTcwOTk0NjgyMQ@@._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BMjA4MDA2OTc4N15BMl5BanBnXkFtZTcwOTk0NjgyMQ@@._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+
+          <td><a href="https://m.media-amazon.com/images/M/MV5BMTg5NzY0MzA2MV5BMl5BanBnXkFtZTYwNDc3NTc2._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BMTg5NzY0MzA2MV5BMl5BanBnXkFtZTYwNDc3NTc2._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+
+          <td><a href="https://m.media-amazon.com/images/M/MV5BMTk5MTU0MTA2OF5BMl5BanBnXkFtZTgwMzQ3MjQ5MDI@._V1_SX300.jpg" target="_blank">
+            <img src="https://m.media-amazon.com/images/M/MV5BMTk5MTU0MTA2OF5BMl5BanBnXkFtZTgwMzQ3MjQ5MDI@._V1_SX300.jpg" alt="portada" width="150" height="265">
+          </a></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
+  <ion-button size="large" routerLink="/pelis" color="secondary">Ver el contenido</ion-button>
+  <ion-button size="large" (click)="onLogout()" color="danger">SALIR</ion-button>
 </ion-content>
