--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="primary" align="center">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
     <ion-title>Registro</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -18,6 +21,7 @@
     </ion-label>
     <ion-input type="password" [(ngModel)]="user.password" required></ion-input>
   </ion-item>
-  <ion-button size="large" (click)="onRegister()">Registrar</ion-button>
-  <ion-button size="large" routerLink="/login">Login</ion-button>
+  <div align="center">
+    <ion-button size="large" (click)="onRegister()" color="secondary">Registrar</ion-button>
+  </div>
 </ion-content>
